--- a/label_mapping.json
+++ b/label_mapping.json
@@ -1,26 +1,26 @@
 {
-    "0": "111_Paper_box",
-    "1": "112_Paper_other",
-    "2": "121_Plastic_box",
-    "3": "122_Plastic_cups",
-    "4": "131_Metal_package",
-    "5": "132_Metal_other",
+    "0": "171_Rubber_toy",
+    "1": "321_Bulky_wood",
+    "2": "334_Other_plastic",
+    "3": "333_Other_household",
+    "4": "111_Paper_box",
+    "5": "172_Rubber_other",
     "6": "141_Glass_bottle",
-    "7": "143_Glass_other",
-    "8": "151_Fabric_leather",
-    "9": "161_Wood_household",
-    "10": "171_Rubber_toy",
-    "11": "172_Rubber_other",
-    "12": "181_Electrical_small",
-    "13": "182_Electrical_large",
-    "14": "211_Food_leftover",
-    "15": "212_Food_other",
-    "16": "3111_Hazardous_other",
-    "17": "3112_Hazardous_medical",
-    "18": "312_Hazardous_light",
-    "19": "313_Hazardous_battery",
-    "20": "321_Bulky_wood",
-    "21": "331_Other_house_organic",
-    "22": "333_Other_household",
-    "23": "334_Other_plastic"
+    "7": "161_Wood_household",
+    "8": "182_Electrical_large",
+    "9": "112_Paper_other",
+    "10": "3111_Hazardous_other",
+    "11": "131_Metal_package",
+    "12": "211_Food_leftover",
+    "13": "143_Glass_other",
+    "14": "132_Metal_other",
+    "15": "3112_Hazardous_medical",
+    "16": "313_Hazardous_battery",
+    "17": "331_Other_house_organic",
+    "18": "181_Electrical_small",
+    "19": "122_Plastic_cups",
+    "20": "151_Fabric_leather",
+    "21": "121_Plastic_box",
+    "22": "212_Food_other",
+    "23": "312_Hazardous_light"
 }
